# boids_rl

./: .gitignore  README.md  analyze_run.py  how-to-run-v2.md  how-to-run.md  pyproject.toml  simulate.py  test_config.toml
blog/: blogpost.md  code_audit_report.md  metric_report_schema.md  process_improvement_roadmap.md  researcher_feedback_overview.md  study_variant_registry.md
blog/studies/: v1_shaped_current_brief.md  v2_hard_walls_brief.md
configs/experiments/baselines/: heuristic_boids_vs_random_predator.toml  learned_prey_no_predator_pressure.toml  learned_prey_vs_learned_predator.toml  learned_prey_vs_random_predator.toml  random_prey_vs_learned_predator.toml  random_vs_random.toml
configs/studies/: v1_shaped_current.toml  v2_hard_walls.toml  v2_hard_walls_scratch.toml
experiments/: README.md  registry.csv
experiments/notes/: single_gpu_perf_handoff.md
experiments/runs/full-v1/: run_manifest.json
experiments/runs/full-v2/: run_manifest.json
experiments/runs/scratch-s0/: run_manifest.json
scripts/: db.py  run_manager.py  worker.py
src/murmur_rl/: __init__.py
src/murmur_rl/agents/: starling.py
src/murmur_rl/analysis/: __init__.py  metrics.py  policies.py
src/murmur_rl/envs/: __init__.py  murmuration.py  physics.py  vector_env.py
src/murmur_rl/experiment/: __init__.py  config.py  runtime.py
tests/: test_analysis_metrics.py  test_audit_regressions.py  test_env.py  test_evolution.py  test_experiment_config.py  test_extreme.py  test_hard_wall_mode.py  test_naive_validation.py  test_physics.py  test_vector_env.py  test_vector_env_perf_lock.py
(+17 files in other folders)
