[project]
name = "murmur-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.3",
    "imageio-ffmpeg>=0.6.0",
    "imageio>=2.37.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pettingzoo>=1.25.0",
    "pygame>=2.6.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "wandb>=0.25.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
